<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_meeting_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    tools:context=".ui.meeting_list.addmeet.AddMeetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/add_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_margin"
            app:srcCompat="@drawable/ic_return_24" />

        <TextView
            android:id="@+id/add_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/add_margin"
            android:text="@string/add_title"
            android:textSize="@dimen/title_size" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_nameLyt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Sujet Réunion"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/date_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/add_margin"
                android:backgroundTint="@android:color/darker_gray"
                android:clickable="true"
                android:padding="@dimen/add_margin"
                android:text="@string/date"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/time_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/add_margin"
                android:backgroundTint="@android:color/darker_gray"
                android:clickable="true"
                android:padding="@dimen/add_margin"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <TextView
            android:id="@+id/meeting_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_margin"
            android:text="@string/room"
            android:textSize="@dimen/title_size" />

        <Spinner
            android:id="@+id/roomSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/add_margin"
            android:layout_marginEnd="@dimen/add_margin" />

        <TextView
            android:id="@+id/contributor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_margin"
            android:text="@string/contributor"
            android:textSize="@dimen/title_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/contributor_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_margin"
            android:backgroundTint="@android:color/darker_gray"
            android:clickable="true"
            android:text="@string/select_contributor"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size"
            app:cornerRadius="20dp" />

        <TextView
            android:id="@+id/list_contributor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_margin"
            android:text="toto@lamzone.com"
            android:textAlignment="center"
            android:textSize="@dimen/text_size"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/add_margin"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/save"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size"
            app:cornerRadius="20dp" />
    </LinearLayout>
</ScrollView>